# docstringify

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  transformer.py  visitor.py
.github/workflows/: ci.yml  pre-commit-autoupdate.yml  pypi-publish.yml
src/docstringify/: cli.py  parameter.py  transformer.py  visitor.py
src/docstringify/converters/: base.py  numpydoc.py
src/docstringify/nodes/: base.py  function.py
src/docstringify/traversal/: transformer.py  visitor.py
